Fix clipping of 'Fixed Volume" text.

--- a/MaterialSkin/HTML/material/html/css/desktop.css
+++ b/MaterialSkin/HTML/material/html/css/desktop.css
@@ -305,6 +305,9 @@ body {
  .v-dialog__content .v-dialog .screensaver-bgnd {
   display:none;
  }
+ .vol-fixed-label {
+  right:105px;
+ }
 }
 
 /* Give more space for 'Open mini-player icon */
